<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/taekwondo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/q1"
            android:textAllCaps="true" />

        <EditText
            android:id="@+id/edit_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/q2"
            android:textAllCaps="true" />

        <CheckBox
            android:id="@+id/a21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/a21"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/a22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/a22"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/a23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/a23"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/a24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/a24"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/a25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/a25"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/a26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/a26"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/a27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/a27"
            android:textSize="16sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/q3"
            android:textAllCaps="true" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/a31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a31" />

            <RadioButton
                android:id="@+id/a32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a32" />

            <RadioButton
                android:id="@+id/a33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a33" />

            <RadioButton
                android:id="@+id/a34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a34" />

            <RadioButton
                android:id="@+id/a35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/a35" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/q4"
                android:textAllCaps="true" />
        </RadioGroup>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/a41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a41" />

            <RadioButton
                android:id="@+id/a42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a42" />

            <RadioButton
                android:id="@+id/a43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a43" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/q5"
            android:textAllCaps="true" />

        <CheckBox
            android:id="@+id/a51"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/a51"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/a52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/a52"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/a53"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/a53"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/a54"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/a54"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/a55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/a55"
            android:textSize="16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="confirm"
            android:text="@string/confirm"
            android:textColor="#FAFAFA" />
    </LinearLayout>
</ScrollView>
